--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,7 +12,12 @@
         "serve-static": "1.6.2",
         "finalhandler": "0.3.0"
     },
+    "devDependencies": {
+        "bower": "^1.3.1"
+    },
     "scripts": {
+        "postinstall": "bower install",
+
         "start" : "node server.js"
     }
 }
