--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -8,6 +8,7 @@
         "Rafael Audy Glanzner <rafael.glanzner@valtech.co.uk>"
     ],
     "dependencies": {
+        "start-stop-daemon": "0.1.0",
         "http-server": "~0.7.1",
         "serve-static": "1.6.2",
         "finalhandler": "0.3.0"
@@ -18,6 +19,8 @@
     "scripts": {
         "postinstall": "bower install",
 
-        "start" : "node server.js"
+        "start" : "node server.js start",
+        "stop" : "node server.js stop",
+        "status": "node server.js status"
     }
 }
