--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,11 @@ language: node_js
 node_js:
    - "0.10"
 
+cache:
+  directories:
+    - frontEnd/node_modules
+    - frontEnd/bower_components
+    - test/node_modules
+
 script:
   - ./.ci_script.sh
