We are now cating the logs

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,8 @@ install:
   - ./run.sh install
 
 script:
+  - ./run.sh start
   - ./run.sh test
+  - ./run.sh stop
+  - cat ./frontEnd/log/appOutFile.log
+  - cat ./frontEnd/log/appErrFile.log
