--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,7 +11,8 @@
         "start-stop-daemon": "0.1.0",
         "http-server": "~0.7.1",
         "serve-static": "1.6.2",
-        "finalhandler": "0.3.0"
+        "finalhandler": "0.3.0",
+        "morgan": ">=1.2.3"
     },
     "devDependencies": {
         "bower": "^1.3.1"
