- Changing the name from Beer to LateRooms - Adding the behavior for new/edit room

--- a/frontEnd/bower.json
+++ b/frontEnd/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "BeerApp",
+  "name": "LateRooms",
   "version": "0.0.1",
   "authors": [
     "Julian Ghionoiu <julian.ghionoiu@valtech.co.uk>",
