--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,7 +12,11 @@
         "http-server": "~0.7.1",
         "serve-static": "1.6.2",
         "finalhandler": "0.3.0",
-        "morgan": ">=1.2.3"
+        "morgan": ">=1.2.3",
+        "express": ">=2.5.10",
+        "body-parser": "*",
+        "method-override": "*",
+        "jade": ">=0.26.1"
     },
     "devDependencies": {
         "bower": "^1.3.1"
