--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -9,14 +9,10 @@
     ],
     "dependencies": {
         "start-stop-daemon": "0.1.0",
-        "http-server": "~0.7.1",
-        "serve-static": "1.6.2",
-        "finalhandler": "0.3.0",
         "morgan": ">=1.2.3",
         "express": ">=2.5.10",
-        "body-parser": "*",
         "method-override": "*",
-        "jade": ">=0.26.1"
+        "body-parser": "*"
     },
     "devDependencies": {
         "bower": "^1.3.1"
