--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ cache:
     - frontEnd/bower_components
     - test/node_modules
 
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+
 install:
   - ./run.sh install
 
