Renaming the server and daemon files to be more consistent across frontend and backend.

--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -12,8 +12,8 @@
         "restify": "2.8.2"
     },
     "scripts": {
-        "start" : "node server.js start",
-        "stop" : "node server.js stop",
-        "status": "node server.js status"
+        "start" : "node daemon.js start",
+        "stop" : "node daemon.js stop",
+        "status": "node daemon.js status"
     }
 }
