--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,10 @@ before_install:
   - sudo apt-get install libcouchbase2 libcouchbase-dev
 
   # Couchbase Server
-  - sudo wget http://packages.couchbase.com/releases/2.0.0/couchbase-server-enterprise_x86_64_2.0.0.deb
-  - sudo dpkg -i couchbase-server-enterprise_x86_64_2.0.0.deb
+#  - sudo wget http://packages.couchbase.com/releases/2.0.0/couchbase-server-enterprise_x86_64_2.0.0.deb
+  - sudo wget http://packages.couchbase.com/releases/2.2.0/couchbase-server-enterprise_2.2.0_x86_64.deb
+  - sudo dpkg -i couchbase-server-enterprise_2.2.0_x86_64.deb
   - sudo service couchbase-server start
-#  - sudo service couchbase-server start
-#  - /opt/couchbase/bin/couchbase-cli cluster-init -c 127.0.0.1:8091 --cluster-init-username=Administrator --cluster-init-password=password --cluster-init-ramsize=256
-#  - /opt/couchbase/bin/couchbase-cli bucket-create -c 127.0.0.1:8091 --bucket=hemlock --bucket-password=password --bucket-type=couchbase --bucket-port=11211 --bucket-ramsize=100 --bucket-replica=0 -u Administrator -p password
 
   # Setup Bucket for test
   # This is done explicitly in the tests now
