Using restangular to make the server calls

--- a/frontEnd/bower.json
+++ b/frontEnd/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-route": "1.2.x",
-    "bootstrap": "3.2.x"
+    "bootstrap": "3.2.x",
+    "restangular": "1.4.0"
   }
 }
