--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,9 +19,10 @@
     "bower": "^1.3.1",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-uglify": "^0.6.0"
+    "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-processhtml": "^0.3.3",
+    "load-grunt-tasks": "^0.6.0"
   },
   "scripts": {
     "postinstall": "bower install",
