--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,13 @@ before_install:
   # - /opt/couchbase/bin/couchbase-cli cluster-init -c 127.0.0.1:8091 --cluster-init-username=Administrator --cluster-init-password=password --cluster-init-ramsize=256
   # - /opt/couchbase/bin/couchbase-cli bucket-create -c 127.0.0.1:8091 --bucket=test --bucket-password=password --bucket-type=couchbase --bucket-port=11211 --bucket-ramsize=100 --bucket-replica=0 -u Administrator -p password
 
+  # Initialize buckets
+  - cp .travis.private-config.js ./db/private-config.js
+
 install:
   - ./run.sh install
+  - ./run.sh db-setup
+  - sleep 3 # Let Couchbase initialize properly
 
 script:
   - ./run.sh start
