--- a/webClient/package.json
+++ b/webClient/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "LateRooms",
+  "name": "ngRooms",
   "version": "0.0.1",
-  "description": "LateRooms website.",
+  "description": "ngRooms website.",
   "author": "Matt Davies=",
   "contributors": [
     "Julian Ghionoiu <julian.ghionoiu@valtech.co.uk>",
