--- a/webClient/bower.json
+++ b/webClient/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "LateRooms",
+  "name": "ngRooms",
   "version": "0.0.1",
   "authors": [
     "Julian Ghionoiu <julian.ghionoiu@valtech.co.uk>",
