--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ before_install:
 install:
   - ./run.sh install
   - ./run.sh db-setup
-  - sleep 3 # Let Couchbase initialize properly
+  - ./run.sh db-seed
+  - sleep 10 # Let Couchbase initialize properly
 
 script:
   - ./run.sh start
