Travis. Added a warm-up period after seed ing the data.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,9 @@ before_install:
 install:
   - ./run.sh install
   - ./run.sh db-setup
-  - sleep 30 # Let Couchbase initialize properly
+  - sleep 10 # Let Couchbase initialize properly
   - ./run.sh db-seed
+  - sleep 10 # Let Couchbase index properly
 
 script:
   - ./run.sh start
