[Travis] Changed the order of the operations so that we setup db before installing dependencies

--- a/db/query/package.json
+++ b/db/query/package.json
@@ -13,6 +13,7 @@
     },
     "main": "./lib/public.js",
     "scripts": {
+        "predb-seed": "npm install",
         "db-seed": "node ./scripts/seed.js"
     }
 }
