Changed format for secure keys

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,10 @@ script:
 before_deploy: "echo 'ready?'"
 deploy:
   provider: s3
-  access_key_id: "wSekH7A+73aoF6+qUZvfdULPb0elsYbOmvCwdZa7S2UA13E8Z1piXzzJtUk+xvdifDPNTSyt7V11JKo2Avebb3Hejueh/7A8OHhu4+9yAOGfCTUJ3GuKXBLwKH4SlOubeetcG3ZcXtSViW78sd55zrSZ+6lUEu5r/YohS5itKYA="
-  secret_access_key: "Ik5uTJGCqjEpOxPvqvv1SLNDu2dLgcKzW1i730AC5o/v0slu8pQO3cmS7fGayVuNIcZwaNs98IWV/kFYvPbFL4/Dg4WVYMS/1DibL0zss6e2+XI1zuXZQJo0k2ERAPqRLqsNK4aB5Vk6HDbSrYC9VFcjMe7R5B7Z9lrpXjETcTs="
+  access_key_id:
+    secure: "BjEpm0koY4i4N9yRouKUS1oxsSjM2J5emojKcQHMzCBzYsGo863uiAvpOVOKfpWT72TqL4ziZpYAwOo5f7gk6bPBAnKzcEuG7GK29yHYw/DoO+dACUt4XPUJdhQELyx9OuCwY97fGUfzbo8YITsXmUpyvX7isw1SWoh0Ydc+ay0="
+  secret_access_key:
+    secure: "bLd4LJZIze0UDakSfP0WoB8Z6m5gRm+Mlr7ADASo43TLvJXlSwzZcMgtN1IPpLR/zXcwKb+fpiN/T1rSPlU+32BCd7SMPA1zy/aWNRHLto7NLOeoRelekxV2Vo3CRF5WDenW8+wb7ZqEQTbvFa/4RxDsmDTH+1gV8oWpFrnIkcA="
   bucket: "jgh-angular-rooms"
   skip_cleanup: true
   region: eu-west-1
