Separated the start script responsibility

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ script:
 
 before_deploy:
   - mkdir build
-  - tar -zcf ./build/db-setup.tar.gz db run.sh
-  - tar -zcf ./build/application.tar.gz api db/query webClient run-prod.sh
+  - tar -zcf ./build/db-setup.tar.gz db db.sh
+  - tar -zcf ./build/application.tar.gz api db/query webClient run.sh
 
 deploy:
   provider: s3
